tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__2xSteel-AAAAAAAAAAAAAAAAAAACuQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 697,
  "prerequisites": [
    65,
    76
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Steel production is so slow. If you got enough bricks and clay, build a second BBF. Build it attached to the first one, so they can share a wall and you will save some bricks, clay and concrete.\n\n[warn]Note that this will generate twice as much pollution in total - consider moving them further away.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§l2x Steel",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65,
    76
  ],
  "rewards": [],
  "tasks": []
}
