tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__4xSteel-AAAAAAAAAAAAAAAAAAACug==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 698,
  "prerequisites": [
    697
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Not even two BBFs are fast enough...Can you figure out how to save the most bricks making 4?\n\n[note]PS: If you can't, this pack may not be for you.[/note]\n\n[warn]Note that this will generate massive amounts of pollution - have you considered the Nether?[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§l4x Steel",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    697
  ],
  "rewards": [],
  "tasks": []
}
