tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__ABeginnersGuidet-NGG2rHQ4T4SInwXT8XTGSg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 8374530939500676682,
  "prerequisites": [
    13039129001980477985
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you've built the Source Chamber already, you may have noticed that particles aren't produced as items, like GT++ ones are.\n\nInstead they're transmitted through Beamline Pipes from multi to multi, similar to real life.\n\nEach stream of particles transmitted, or \"beam\", has four properties:\n- §6Particle§r: the type of particle carried by the beam\n- §4Energy§r: the amount of energy the particles have\n- §9Focus§r: out of 100, how focused the beam is\n- §dAmount§r: a measure of the number of particles in the beam\n\nNote that you can see info about a multi's input and output beams by using a Tricorder on the controller.\n\nFor the recipes you'll be interested in, i.e. the ones that actually produce items, there'll be a threshold for allowed input beam energy, a minimum focus value, and an amount value which determines recipe time (more on that in the Target Chamber quest).\nTake a look some TC recipes for an example of this.\n\nHave a photon. To hang on your wall.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Beginner's Guide to Particle Physics",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13039129001980477985
  ],
  "rewards": [],
  "tasks": []
}
