tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__AVeryUsefulScann-AAAAAAAAAAAAAAAAAAADrQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 941,
  "prerequisites": [
    1477,
    1478,
    77
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The portable scanner is a tool capable of showing advanced information about almost every block in the game. In order to function, the tool needs to be charged first. It can hold up to 400k EU and accept 128 EU/t or less. This is MV tier.\n\nIt can scan crops by right-clicking it to fully scan it, unlike a cropnalyzer which needs a seed bag in your inventory, and takes multiple goes. Crops that were scanned in the world will drop a scanned seed bag.\n\nIt can scan machines from GregTech, giving information about current progress, the stored energy, efficiency, problems and CPU-load - be sure to check the full chat window for additional details.\n\nFor any block in the game it scans, it gives information about its ID, Metadata, position in the world and hardness value. It also gives information about pollution level in the chunk the scanned block belongs to.\n\nIn addition it shows when the cleanroom has reached its 100 percent efficiency level.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lA Very Useful Scanner",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1477,
    1478,
    77
  ],
  "rewards": [],
  "tasks": []
}
