tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__AirFilter-AAAAAAAAAAAAAAAAAAALpQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2981,
  "prerequisites": [
    88
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Electric Air Filter\n\nThis wonderful multiblock comes in 3 versions: T1 for LV, T2 for late HV and T3 for IV.\n\nIt has 2 modes:\n\n- a normal mode, where one chunk is processed at a time in the working area, in order, per pollution cleaning cycle.\n- a random mode, where the chunk being cleaned is picked randomly between all the polluted chunks in the working area.\n To cycle between the modes, right-click on the controller with a screwdriver.\n\nThe controller can change its working area from 1x1 to (2*tier+1) x (2*tier+1) chunks. To do that, right-click with a screwdriver on the controller while sneaking. The default size is the maximum working area.\n\nThe pollution removal calculation is equals (by default) to 30 * bonusMultiTier * Muffler Hatches * Turbine Eff * Multiblock Eff * 2.5 ^ Effective Tier where:\n\n- BonusMultiTier is a boost given by the multiblock tier. T1 is 1 (0%), T2 is 1.05 (5%) and T3 is 1.10 (10%)\n\n- Muffler Hatches is the amount of muffler hatches on the multiblock (up to 8)\n\n- Turbine Eff is the efficiency of the turbine chosen to run the multi. It won't run if there is no turbine in the controller.\n\n- Multiblock Eff is the efficiency of the multiblock (100% when no maintenance issue, -10% per issue)\n\n- Effective Tier is the Effective Tier of the multi: the minimum tier between the electric tier of the multi and the tier of the muffler hatches.\n\nThe pollution cleaning is boosted by two (by default) when using an Absorption Filter. When added in the input bus, it will be consumed and used for 30 (by default) successful pollution cleaning cycle. If a chunk with no pollution in it is processed, that doesn't count as successful, and the multi decides that a chunk has no pollution if the pollution is below 10k gibbl (by default). After the 30th successful pollution cleaning cycle, the output bus will give a Dirty Absorption Filter.\n\nTo know if an Absorption Filter is present and how many remaining cycles there are, use a portable scanner on the controller.\n\nA pollution cycle lasts 10s, and the cleaning is done every second.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lAir-Filter",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    88
  ],
  "rewards": [],
  "tasks": []
}
