tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__AlgaePond-Ds_ok-hRS2ODJNs3LUP9kw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 16740244179246120339,
  "prerequisites": [
    1598
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Sustainability. It's not the name of the game... but it could be!\n\nIf you've ever wanted to generate many chemicals from a single source, you've probably looked at Oil or Benzene. However there's also the Algae Farm. It's just a pond of sorts, so it doesn't need power to run. Since it also doesn't really follow normal recipes, you won't find any NEI recipe page for the Algae. The multi just produces them on a regular schedule.\n\nThe tier of the multi is given by the casings on the bottom layer of the multi, which all have to match to decide the tier. Each tier from ULV (starting at 50s per batch) till IV (which is 25s per batch) reduces the time it takes to produce Algae by about 5 seconds, and then beyond that each tier will cut the speed in half. Randomly the production speed can either double or triple the time it takes as well, but this happens relatively rarely.\n\nEach tier increase also adds to the amount of Algae you get in a single cycle, as well as the type of Algae produced. Each cycle gives out an exact amount as well as a bonus amount 10% of the time. The Algae Farm also accepts Compost, that you can make from the algae itself, to boost the multi's tier by one. This might be expensive at the start, but it's heavily recommended in most cases. You can get regular Algae and Green Algae starting at ULV, Brown Algae starts appearing at HV, Golden-Brown Algae at EV, and Red Algae at IV, though most of the cases where they start appearing they start doing so in very small quantities.\n\nTo find out more about the exact output quantities and timings, please see the wiki: [url]https://wiki.gtnewhorizons.com/wiki/Algae_Farm[/url]\n\nThe Algae can be used for various chemicals like Methane, Ammonia, Sulfuric Acid, Sodium Carbonate, Ethylene, Lithium Chloride, and even some power-generating fluids. You typically need a Chemical Plant for that. In IV tier you can also combine Green Algae with Glowstone to get Glowing Coral and make Sunnarium from that. If you're curious about all the processing chains, look them up on NEI: quests to cover them are coming up, possibly with more recipes that don't need the chemplant.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Algae Pond",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1598
  ],
  "rewards": [],
  "tasks": []
}
