tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__AnUnexpectedBonu-AAAAAAAAAAAAAAAAAAAAUg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 82,
  "prerequisites": [
    698
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Because we're nice developers, we decided to add a little bonus if you happen to compress charcoal. Use it in the bricked blast furnace, or in a boiler, it yields 10 times the burn time of a piece of charcoal. So one charcoal for free. This bonus only occurs on the first compression step. (But for fanciness, you should definitely get a quintuple one!)\n\n[note]Of course they're kinda useless unless you're using BBFs or boilers, though you can use them to make industrial diamonds.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lAn Unexpected Bonus",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    698
  ],
  "rewards": [],
  "tasks": []
}
