tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__AssemblyLine-AAAAAAAAAAAAAAAAAAAFhA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1412,
  "prerequisites": [
    1890,
    1707
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Assembly Line (or 'Assline') is an important machine for high tier components in LuV tier and above for making Motors, Pistons, Robot Arms, Pumps and many more.\n\nThe multiblock can be 5-16 blocks long. The minimum length required depends on the number of components and fluids required by the recipe it's crafting. A length of 11 blocks will fit 80 percent of all recipes in GTNH.\n\nThe bottom layer must have on one outer side all the Input Hatches for fluids (4), in the bottom middle layer Input Buses for items (10), and on the end 1 Output Bus. Also on the bottom outer layer must be one Maintenance Hatch. The rest is Solid Steel Machine Casings.\n\nThe second layer on the outer sides left and right are Reinforced Glass and in the middle center Assembly Line Casing.\n\nThe third layer has on the left and right Grate Machine Casings and in the middle Assembler Machine Casings (Note the name change!). The Assembly Line control block and Data Access Hatch are on the opposite edge from the Input Hatches - not at the end with the Output Bus.\n\nThe fourth layer is a single line of Solid Steel Machine Casings in the middle (11), with two Energy Hatches for power. Once you have it built, you can replace the two IV energy hatches with 1 LuV energy hatch.\n\nAutomating the assline is a difficult challenge! You can use advanced tools like SFM or OpenComputers, but maybe you can figure out how to do it with EnderIO or just AE2.\n\nFor more details on using the Assembly Line, check out the wiki page [url]https://wiki.gtnewhorizons.com/wiki/Assembly_Line[/url]\n\n[note]BTW the input buses are ULV to help with your automating, if you don't want to automate it, you can use higher tier ones, unlike the CAL.[/note]\n\n[note]You can have up to 16 input buses. If you use the full 16 you should put the output bus to the side.[/note]\n\n[note]When using buses of a higher tier than ULV it will look for items starting at the top left slot, down to the bottom right slot.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lAssembly Line",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1890,
    1707
  ],
  "rewards": [],
  "tasks": []
}
